tests/ui/async-await/feature-self-return-type.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/feature-self-return-type.rs:12:45
   |
LL |       pub async fn new(_bar: &'a i32) -> Self {
   |  _____________________________________________^
LL | |         Foo {
LL | |             bar: &22
LL | |         }
LL | |     }
   | |_____^
   |
note: lifetime used multiple times
  --> $DIR/feature-self-return-type.rs:11:6
   |
LL | impl<'a> Foo<'a> {
   |      ^^

error[E0597]: `bar` does not live long enough
  --> $DIR/feature-self-return-type.rs:22:18
   |
LL |     let x = {
   |         - borrow later stored here
LL |         let bar = 22;
   |             --- binding `bar` declared here
LL |         Foo::new(&bar).await
   |                  ^^^^ borrowed value does not live long enough
LL |
LL |     };
   |     - `bar` dropped here while still borrowed

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0597, E0792.
For more information about an error, try `rustc --explain E0597`.
